# iga-platform

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
fixtures/jml-demo/: README.md  fixture_keys.env  generate_fixtures.py  round1_baseline.csv  round1_baseline_1.csv  round2_transfers_terminations.csv
infra/: dev.bicepparam  main.bicep  prod.bicepparam
infra/modules/: compute.bicep  data.bicep  messaging.bicep  network.bicep  observability.bicep  security.bicep  web.bicep
k8s/base/: namespace.yaml
k8s/services/: access-request-service.yaml  flatfile-connector-service.yaml  identity-service.yaml  lifecycle-sweep.yaml  notification-service.yaml  provisioning-service.yaml  rbac-service.yaml  rules-engine-service.yaml  source-system-service.yaml
roadmap/: PHASES.md
scripts/: deploy.sh  dev-portal.sh  dispatch-retry-verify.sh  drain-provisioning-dlq.sh  jml-demo.sh  smoketest.sh  spa-gate.sh  verify.sh
src/access-request-service/: requirements.txt
src/access-request-service/app/: db.py  main.py  models.py
src/flatfile-connector-service/: Dockerfile  requirements.txt
src/identity-service/: Dockerfile  requirements.txt
src/notification-service/: Dockerfile  requirements.txt
src/provisioning-service/: Dockerfile  requirements.txt
src/rbac-service/: requirements.txt
src/rbac-service/app/: db.py  (+2 more)
src/rules-engine-service/: requirements.txt
src/source-system-service/: Dockerfile  requirements.txt
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  authConfig.ts  main.tsx  styles.css
(+46 files in other folders)
